--- a/.github/workflows/lint.yaml
+++ b/.github/workflows/lint.yaml
@@ -11,6 +11,9 @@ jobs:
         uses: actions/checkout@v2
         with:
           ref: ${{ github.event.pull_request.head.sha }}
+      - name: actions/setup-go@v2
+        with:
+          go-version: "^1.16.3"
       - name: run linter
         uses: reviewdog/action-golangci-lint@v1
         with:
