--- a/.github/workflows/lint.yaml
+++ b/.github/workflows/lint.yaml
@@ -11,7 +11,8 @@ jobs:
         uses: actions/checkout@v2
         with:
           ref: ${{ github.event.pull_request.head.sha }}
-      - name: actions/setup-go@v2
+      - name: setup golang 
+        uses: actions/setup-go@v2
         with:
           go-version: "^1.16.3"
       - name: run linter
