--- a/.github/workflows/lint.yaml
+++ b/.github/workflows/lint.yaml
@@ -5,18 +5,15 @@ on:
       - master
 jobs:
   lint:
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-latest
     steps:
       - name: check out code
-        uses: actions/checkout@v2
-        with:
-          ref: ${{ github.event.pull_request.head.sha }}
+        uses: actions/checkout@v3
       - name: setup golang 
-        uses: actions/setup-go@v2
+        uses: actions/setup-go@v4
         with:
-          go-version: "^1.16.3"
+          go-version: "1.20"
       - name: run linter
-        uses: reviewdog/action-golangci-lint@v1
+        uses: golangci/golangci-lint-action@v3
         with:
-          github_token: ${{ secrets.github_token }}
-          golangci_lint_flags: "-c .golangci.yml"
+          version: latest
