chore(create-pull-request.yaml): update GitHub Actions workflow to use the latest version of the 'actions/checkout' action and fix the GitHub token secret name
The GitHub Actions workflow has been updated to use the latest version
(v3) of the 'actions/checkout' action. Additionally, the secret name for
the GitHub token has been fixed to use the correct name 'GITHUB_TOKEN'
instead of 'WORKFLOW_RUN'. This ensures that the workflow can
successfully create pull requests from branches into the 'develop'
branch.

--- a/.github/workflows/create-pull-request.yaml
+++ b/.github/workflows/create-pull-request.yaml
@@ -3,8 +3,9 @@ on: create
 jobs:
   create-pr:
     runs-on: ubuntu-latest
+    if: github.actor != 'dependabot[bot]'
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
       - name: get branch name
         id: vars
         run: |
@@ -13,6 +14,6 @@ jobs:
       - name: pull-request
         uses: repo-sync/pull-request@v2
         with:
-          github_token: ${{ secrets.WORKFLOW_RUN }}
+          github_token: ${{ secrets.GITHUB_TOKEN }}
           destination_branch: "develop"
           pr_title: "Pulling ${{ steps.vars.outputs.branch }} into develop"
