--- a/.golangci.yml
+++ b/.golangci.yml
@@ -1,19 +1,26 @@
-linters-settings:
-   lll:
-      line-length: 2380
-   funlen:
-      lines: 75
+run:
+  allow-parallel-runners: true
+linters-settings: 
+    funlen:
+        lines: 80
+    revive:
+      rules:
+        - name: var-naming
+          arguments: [["ID"]]
 linters:
   # inverted configuration with `enable-all` and `disable` is not scalable during updates of golangci-lint
   disable-all: true
   enable:
+    - asciicheck
     - bodyclose
-    - deadcode
+    - bidichk
+    - cyclop 
     - depguard
-    - dupl
+    - decorder
+    - dogsled
+    # - dupl
     - errcheck
     - funlen
-    - gochecknoinits
     - goconst
     - gocritic
     - gocyclo
@@ -23,23 +30,20 @@ linters:
     - gosimple
     - govet
     - ineffassign
-    - interfacer
     - lll
     - misspell
     - nakedret
+    - revive
     - staticcheck
-    - structcheck
-    - stylecheck
     - typecheck
     - unconvert
     - unparam
     - unused
-    - varcheck
     - whitespace
 
   # don't enable:
-  # - scopelint (obsoloete)
   # - godox
   # - maligned,prealloc
   # - gochecknoglobals
   # - golint
+  # - gochecknoinits
