chore(lint.yaml): update golangci-lint version to v1.52.2
The golangci-lint version has been updated to v1.52.2 in order to
utilize the latest features and bug fixes provided by the new version.

--- a/.github/workflows/lint.yaml
+++ b/.github/workflows/lint.yaml
@@ -16,4 +16,4 @@ jobs:
       - name: run linter
         uses: golangci/golangci-lint-action@v3
         with:
-          version: 1.52.2
+          version: v1.52.2
