--- a/.github/workflows/build-resticpg.yaml
+++ b/.github/workflows/build-resticpg.yaml
@@ -34,6 +34,6 @@ jobs:
         with:
           push: true
           file: build/package/Dockerfile.resticpg
-          tags: dictybase/resticpg:${{ github.base_ref }}-${{ steps.sha.outputs.id }}
+          tags: dictybase/resticpg:${{ github.ref_name }}-${{ steps.sha.outputs.id }}
           cache-from: type=local,src=/tmp/.buildx-cache
           cache-to: type=local,dest=/tmp/.buildx-cache
