chore(build-resticpg.yaml): update Docker image tags to include latest tag for better versioning and deployment
The Docker image tags have been updated to include both the specific
branch and commit ID, as well as the "latest" tag. This allows for
better versioning and deployment strategies, as the "latest" tag can be
used to easily reference the most recent build of the image.

--- a/.github/workflows/build-resticpg.yaml
+++ b/.github/workflows/build-resticpg.yaml
@@ -4,7 +4,6 @@ on:
     branches:
       - develop
       - master
-      - "feat/**"
 jobs:
   buildrpg:
     runs-on: ubuntu-latest
@@ -38,6 +37,6 @@ jobs:
         with:
           push: true
           file: build/package/Dockerfile.resticpg
-          tags: dictybase/resticpg:${{ steps.branch.outputs.id }}-${{ steps.sha.outputs.id }}
+          tags: dictybase/resticpg:${{ steps.branch.outputs.id }}-${{ steps.sha.outputs.id }},dictybase/resticpg:${{ steps.branch.outputs.id }}-latest
           cache-from: type=local,src=/tmp/.buildx-cache
           cache-to: type=local,dest=/tmp/.buildx-cache
